commented each line/block of tab js, minor updates to styling, added placeholder page content to html to ensure scrollToDiv is working.

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,8 @@ body {
   border-right: none;
 }
 
-.tabs-nav li:hover {
+.tabs-nav li:hover,
+.tabs-nav li.current {
   cursor: pointer;
   background: #eee;
   color: #cc0000;
